# Fight-Game

./: .gitignore  CMakeLists.txt  Makefile  README.md  add_dependencies.sh  setup.sh
include/: audio.h  colors.h  enemy.h  example-al.h  example-gl.h  gl.h  interactable.h  logging.h  object.h  player.h  room.h  roomtype.h  tests.h  types.h  utils.h
src/: audio.c  example-al.c  example-gl.c  fight.c  gl-text.c  gl.c  logging.c  main.c  object.c  room.c  roomtype.c  tests.c  utils.c
